--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,8 +10,8 @@
 <title>TRIBE</title>
 
 <!-- Bootstrap core CSS -->
-<link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="../bower_components/burger/dist/css/burger.min.css" rel="stylesheet">
+<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="bower_components/burger.min.css" rel="stylesheet">
 
 <!-- Custom styles for this template -->
 <link href="stylesheets/cover.css" rel="stylesheet">
