--- a/public/stylesheets/starter-template.css
+++ b/public/stylesheets/starter-template.css
@@ -1,7 +1,10 @@
 body {
-  padding-top: 0px;
+  padding-top: 50px;
+  background-color: #fff;
 }
 .starter-template {
-
+  padding: 40px 15px;
   text-align: center;
 }
+
+
