--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -12,8 +12,8 @@
           <li><a href="/show"><%= currentUser.local.email %></a></li>
           <li><a href="/logout">Logout</a></li>
         <% } else { %>
-          <!-- <li><a href="/login">Login</a></li>
-          <li><a href="/signup">Signup</a></li> -->
+          <li><a href="/login">Login</a></li>
+          <li><a href="/signup">Signup</a></li>
         <% } %>
       </ul>
     </nav>
