--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,22 +1,66 @@
-  <main>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Starter Template for Bootstrap</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="stylesheets/starter-template.css" rel="stylesheet">
+    <link href="stylesheets/sticky-footer-navbar.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">TRIBE</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/show">View Profile</a></li>
+            <li><a href="/logout">Logout</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
     </nav>
 
- <body>
-  <div class="site-wrapper">
-    <div class="inner">
 
+<div class="container">
   <div class="row">
     <div class="col-md-12">
         <h1>Choose Interests</h1>
           <p class="lead">Help us find you a tribe</p>
       </div>
 
-    <form name="InterestCategories" method="POST" action="/edit?_method=PUT">
+      <form name="InterestCategories" method="POST" action="/edit?_method=PUT">
 
-      <div class="row">
-      <div class="col-md-6">
-      <h3>Movie Types</h3>
+        <div class="row">
+        <div class="col-md-3">
+        <h3>Movie Types</h3>
 
         <div class="checkbox">
           <label>
@@ -50,7 +94,7 @@
       </div>
 
 
-      <div class="col-md-6">
+      <div class="col-md-3">
       <div>
         <h3>Sports</h3>
 
@@ -79,11 +123,10 @@
             <input type="checkbox" name='interests[]' value="Rugby">Rugby
           </label>
           </div>
-</div>
-</div>
+      </div>
+      </div>
 
-<div class="row">
-      <div class="col-md-6">
+      <div class="col-md-3">
       <div>
         <h3>Food</h3>
 
@@ -116,7 +159,7 @@
       </div>
 
 
-<div class="col-md-6">
+      <div class="col-md-3">
       <div>
         <h3>Health and Fitness</h3>
           <div class="checkbox">
@@ -145,11 +188,9 @@
           </label>
           </div>
       </div>
-</div>
+      </div>
 
-
-<div class="row">
-<div class="col-md-4-4"
+<div class="col-md-4"
       <div>
         <h3>Music</h3>
           <div class="checkbox">
@@ -179,15 +220,10 @@
           </div>
       </div>
 </div>
-</div>
-
-</div>
-</div>
-
 <br>
 <br>
       <div>
-        <input class="btn btn-default" type="submit" value="Submit">
+        <input class="btn btn-default btn-center" type="submit" value="Submit">
       </div>
 
     </form>
@@ -195,9 +231,20 @@
 
     </div><!-- /.container -->
 
+
+    <footer class="footer">
+      <div class="container">
+        <center><p class="text-muted" style="color:white">It takes considerable knowledge just to realize the extent of your own ignorance.
+</p></center>
+      </div>
+    </footer>
+
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  </main>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  </body>
+</html>
+
