--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,29 +1,65 @@
-  <main>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
+    <title>Signin Template for Bootstrap</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="/stylesheets/signin.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="container">
 
       <form class="form-signin" method="post" action="/signup">
 
-        <h2 class="form-signin-heading">Please Sign Up</h2>
-          <label for="inputEmail" class="sr-only">Email address</label>
-
+        <h2 class="form-signin-heading" style="color:white">Please Sign Up</h2>
+        <label for="inputFirstName" class="sr-only">First Name</label>
+        <br>
+        <input type="Last Name" name="first_name" id="inputFirstName" class="form-control" placeholder="First Name" required autofocus>
+        <label for="inputLastName" class="sr-only">Last Name</label>
+        <br>
+        <input type="Location" name="last_name" id="inputLastName" class="form-control" placeholder="Last Name" required autofocus>
+        <label for="inputLocation" class="sr-only">Location</label>
+        <br>
+        <input type="Location" name="location" id="inputLocation" class="form-control" placeholder="Location" required autofocus>
+        <br>
+        <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <br>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+
         <div class="checkbox">
           <label>
-            <input type="checkbox" value="remember-me"> Remember me
+            <input type="checkbox" value="remember-me" style="color:white"> Remember Me
           </label>
         </div>
         <br>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
 
       </form>
-
+      <form class="form-signin" method="get" action="/">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Home</button>
+      </form>
 
     </div> <!-- /container -->
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </main>
-
+  </body>
+</html>
