--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -52,8 +52,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-        <h1>Choose Interests</h1>
-          <p class="lead">Help us find you a tribe</p>
+      <h1>Choose Interests</h1>
+          <p class="lead">Welcome <%= currentUser.first_name %>, help us find you a tribe!</p>
       </div>
 
       <form name="InterestCategories" method="POST" action="/edit?_method=PUT">
