--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,9 @@
     <link href="stylesheets/jumbotron-narrow.css" rel="stylesheet">
     <link href="stylesheets/sticky-footer-navbar.css" rel="stylesheet">
     <link href="stylesheets/style.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
-
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oleo+Script:700' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -53,7 +54,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1 style:"font-family: 'Dancing Script', cursive">Go ahead. Find your <span style="color:white">TRIBE.</span></h1>
+        <h1 style="font-family: 'Oleo Script', cursive;">Go ahead. Find your <span style="color:white">TRIBE.</span></h1>
         <div><img src="tribe-10.png"></div>
         <div class="row">
           <a class="btn btn-info" href="/login" role="button">Sign In</a>
@@ -66,8 +67,8 @@
       <div class="row">
             <center>
             <div class="col-md-8-offset-4">
-              <h2>About TRIBE</h2>
-              <p>Tribe is a networking platform used to bring users who have common interests to events that cater to those interests! Users fill out a small form after signing up, and are then presented with a list of nearby events. If the user is interested in those events, they can pull up more information about the event, as well as other local users who would also like to attend!</p>
+              <h1>About TRIBE</h1>
+              <h2><p><span style="font-family: 'Droid Serif', serif;"<p>Tribe is a networking platform used to bring users who have common interests to events that cater to those interests! Users fill out a small form after signing up, and are then presented with a list of nearby events. If the user is interested in those events, they can pull up more information about the event, as well as other local users who would also like to attend!</p></span></h2>
               <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
             </div><!--/.col-xs-6.col-lg-4-->
 </center>
